# bitpacker

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
include/bitpacker/: bitpacker.hpp
support/cmake/: set_warning_flags.cmake
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  main.cpp
tests/src/include/: tests_stdafx.hpp
